# spark

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/crescenzi/spark/: JavaActivity.java  KotlinActivity.kt
app/src/main/jni/: Cargo.toml
app/src/main/jni/src/: lib.rs  main.rs
app/src/main/kotlin/com/crescenzi/spark/: MainActivity.kt
app/src/main/res/drawable/: main_ic.xml  mpm_bg.xml
app/src/main/res/mipmap-anydpi-v26/: mpm_ic.xml
app/src/main/res/values/: themes.xml
app/src/main/rust/src/: lib.rs
gradle/: libs.versions.toml
