[package]
name = "spark_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

# == ANDROID INTEROP == #
jni = "0.21"

# == API CALLS == #
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }

# == ANDROID LOGGING == #
log = "0.4"
android_logger = "0.13"